--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Capsule is an e-commerce online drug store.Provides services that include buying the drugs and supplement online. 
+    The website enables stakeholders and  customers to smoothly  buy  products.
+    "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content=" Drugs , Store , Capsule , Therapy , Medical, React,Pharmacy, Supplement,Patient,Medicine , Treatment"
+    />
+    <meta name="author" content="Capsule team" />
+    <meta http-equiv="refresh" content="30" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,6 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,7 +48,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>Capsule</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
